# AD_project_athena

./: .pre-commit-config.yaml  README.md
source_code/: .dockerignore  .env.sample  .gitignore  docker-compose.yml  pyproject.toml
source_code/environments/dev/: Dockerfile  default.conf  init-ollama.sh  init-pg-extensions.sh  nginx.conf  postgres.Dockerfile  start-webapp.sh
source_code/environments/test/: Dockerfile  init-pg-extensions.sh  postgres.Dockerfile
source_code/tools/: webapp-console.sh  webapp-makemigrations.sh  webapp-migrate.sh  webapp-test.sh
source_code/webapp/: manage.py
source_code/webapp/agent/: admin.py  models.py  urls.py  views.py
source_code/webapp/agent/migrations/: 0001_initial.py  0002_questiontask_code_result_questiontask_feedback.py  0003_questiontask_user.py  0004_questiontaskrating.py  0005_alter_questiontaskrating_message.py
source_code/webapp/agent/services/: __init__.py  code_execute_service.py  code_judge_service.py
source_code/webapp/agent/static/: script.js  styles.css
source_code/webapp/agent/tasks/: __init__.py  (+1 more)
source_code/webapp/api/: urls.py
source_code/webapp/article/: exceptions.py  models.py
source_code/webapp/config/: asgi.py  celery.py  urls.py  wsgi.py
source_code/webapp/main/: urls.py  views.py
source_code/webapp/proto/: executor_pb2.py  executor_pb2_grpc.py  judger_pb2.py  judger_pb2_grpc.py  testcase_generator.proto  testcase_generator_pb2.py  testcase_generator_pb2_grpc.py
source_code/webapp/templates/: 403.html  500.html  _breadcrumb.html  _navbar.html  base.html
source_code/webapp/user/: urls.py  views.py
(+99 files in other folders)
